--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "gsap": "^3.12.7",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "motion": "^12.4.4",
     "next": "15.1.6",
@@ -32,12 +33,14 @@
     "react-bits": "^1.0.5",
     "react-dom": "^19.0.0",
     "react-slick": "^0.30.3",
+    "sonner": "^2.0.1",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
