--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "motion": "^12.4.4",
-    "next": "15.1.6",
+    "next": "^14.2.3",
     "ogl": "^1.0.11",
     "react": "^18.0.0",
     "react-bits": "^1.0.5",
