--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.3.1",
     "react-bits": "^1.0.5",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.4.1",
     "react-slick": "^0.30.3",
     "sonner": "^2.0.1",
     "swiper": "^11.2.2",
